# arise-vulcanexus-enviroment

./: .gitignore  CV2_hololens_stream.py  Dockerfile  README.md  audio_interface.py  interface_ch1.py  interface_ch2.py  run_ch2.sh
GUIs/: interface_ch1.py
arise_ws/src/challenge1/battery_disassembly/: package.xml  setup.cfg  setup.py
arise_ws/src/challenge1/battery_disassembly/battery_disassembly/: __init__.py  audio_interface.py  detect_screws.py  hri_communication.py  ur10e_screw.py
arise_ws/src/challenge1/battery_disassembly/battery_disassembly/files/: lastQRs.txt
arise_ws/src/challenge1/battery_disassembly/launch/: battery_disassembly.launch.py
arise_ws/src/challenge1/battery_disassembly/module/: battery_disassembly  battery_disassembly_module.yaml
arise_ws/src/challenge1/battery_disassembly/resource/: parameters.json
arise_ws/src/challenge2/fruit_picking/: package.xml  setup.cfg  setup.py
arise_ws/src/challenge2/fruit_picking/fruit_picking/: __init__.py  arise_ai.py  detect_fruits.py  fruits_manager.py  intel_transforms.py  linear_guide_controller.py  ollama_request.py  robot_pick.py
arise_ws/src/challenge2/fruit_picking/launch/: fruit_picking.launch.py
arise_ws/src/challenge2/fruit_picking/module/: fruit_picking  fruit_picking_module.yaml
arise_ws/src/challenge2/fruit_picking/resource/: parameters.json
arise_ws/src/hl2_streamming/: package.xml  setup.cfg  setup.py
arise_ws/src/hl2_streamming/hl2_streamming/: body_stream.py  hl2ss.py  hl2ss_lnm.py
arise_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
arise_ws/src/my_robot_interfaces/msg/: Fruits.msg  JXCP1Inputs.msg
arise_ws/src/my_robot_interfaces/srv/: CheckGeometry.srv  CheckInt.srv  FruitInfo.srv  List.srv  PickObject.srv  PixelsToPoint.srv  TransformCoordinates.srv
arise_ws/src/utils/: DB_connection.py  claseGuia.py  claseLuces.py  claseMongoDB.py  clasePinza.py  claseRobot.py  claseVentosa.py  realsense2ros.py  transforms.py
docs/: START-UP GUIDE CH1.docx
