<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>battery_disassembly</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Cervera-5R-Hololens@outlook.es">root</maintainer>
  <license>Apache License 2.0</license>

  <!-- Estas dos líneas hay que agregarlas manualmente para poder utilizar servicios o agregando etiqueta dependencies rclpy en la creación del paquete -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_index_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
